--- a/public/assets/styles/components/header.scss
+++ b/public/assets/styles/components/header.scss
@@ -11,6 +11,28 @@
   max-width: 1100px;
   right: -150px;
   top: -450px;
+  @media screen and (max-width: 2167px){
+    max-width: 800px;
+  }
+  @media screen and (max-width: 1730px){
+    top: -300px;
+  }
+  @media screen and (max-width: 1280px){
+    max-width: 600px;
+    right: 20px;
+    top: -170px;
+  }
+  @media screen and (max-width: 910px){
+    max-width: 450px;
+    top: -150px;
+  }
+  @media screen and (max-width: 639px){
+    max-width: 300px;
+    top: -90px
+  }
+  @media screen and (max-width: 460px){
+    right: -77px;
+  }
 }
 
 .phone-viewport{
