Update routes for marketplace collectibles

--- a/public/assets/styles/styles.scss
+++ b/public/assets/styles/styles.scss
@@ -16,6 +16,9 @@
 @import 'components/header';
 @import 'components/interactivePhone';
 
+// Theme
+@import 'theme';
+
 // Pages
 @import 'pages/home';
 
