--- a/public/assets/styles/typography.scss
+++ b/public/assets/styles/typography.scss
@@ -2,10 +2,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 body{
   font-family: 'Roboto', sans-serif;
 }
 
 .ecomiFont{
   font-family: 'Raleway', sans-serif;
+}
+
+.bebasFont{
+  font-family: 'Bebas Neue', cursive;
 }
