--- a/public/assets/styles/styles.scss
+++ b/public/assets/styles/styles.scss
@@ -16,6 +16,7 @@
 @import 'components/header';
 @import 'components/footer';
 @import 'components/interactivePhone';
+@import 'components/slick-slider';
 
 // Theme
 @import 'theme';
