--- a/public/assets/styles/styles.scss
+++ b/public/assets/styles/styles.scss
@@ -17,6 +17,7 @@
 @import 'components/footer';
 @import 'components/interactivePhone';
 @import 'components/slick-slider';
+@import 'components/meet-the-team';
 
 // Theme
 @import 'theme';
