End of day commit

--- a/public/assets/styles/styles.scss
+++ b/public/assets/styles/styles.scss
@@ -18,12 +18,14 @@
 @import 'components/interactivePhone';
 @import 'components/slick-slider';
 @import 'components/meet-the-team';
+@import 'components/cards';
 
 // Theme
 @import 'theme';
 
 // Pages
 @import 'pages/home';
+@import 'pages/tokenomics';
 
 // Trumps
 @import 'trumps';
