--- a/public/assets/styles/theme.scss
+++ b/public/assets/styles/theme.scss
@@ -1,7 +1,7 @@
 body{
   background: #0E1032;
-  background-image: url('/assets/images/ui/texture.png');
-  background-size: 20%;
+  //background-image: url('/assets/images/ui/texture.png');
+  //background-size: 20%;
 }
 
 .texture-bg{
@@ -12,8 +12,7 @@ body{
   height: 100%;
   width: 100%;
   top: 0;
-  background: radial-gradient(circle, rgba(14,16,50,1) 0%, rgba(0,212,255,0) 100%);
-  background: radial-gradient(circle, rgba(37,41,106,1) 0%, rgba(0,212,255,0) 100%);
+  background: radial-gradient(circle, #383E98 0%, rgba(0,212,255,0) 100%);
   background-blend-mode: multiply;
   z-index: -1;
   opacity: 0.8;
