--- a/public/assets/styles/styles.scss
+++ b/public/assets/styles/styles.scss
@@ -86,6 +86,316 @@ body{
 
 }
 
+// trump
+.latest-drops--view-all{
+  width: 279.93px!important;
+  height: 463.99px;
+}
+
+// coin stack
+.coin-stack{
+  position: relative;
+  display: inline-block;
+  margin: 30px 0!important;
+  min-height: 120px;
+  width: 100px;
+  margin-right: 20px;
+  .coin{
+    &:first-child{
+      bottom: 0;
+    }
+    &:nth-child(2){
+      bottom: 6px;
+    }
+    &:nth-child(3){
+      bottom: 12px;
+    }
+    &:nth-child(4){
+      bottom: 18px;
+    }
+    &:nth-child(5){
+      bottom: 24px;
+    }
+    &:nth-child(6){
+      bottom: 30px;
+    }
+    &:nth-child(7){
+      bottom: 36px;
+    }
+    &:nth-child(8){
+      bottom: 42px;
+    }
+    &:nth-child(9){
+      bottom: 48px;
+    }
+    &:nth-child(10){
+      bottom: 54px;
+    }
+    &:nth-child(11){
+      bottom: 60px;
+    }
+    &:nth-child(12){
+      bottom: 66px;
+    }
+  }
+}
+.coin{
+  height: 75px;
+  width: 100px;
+  background: #fff;
+  border-radius: 50%;
+  display: inline-block;
+  box-shadow: inset 0px -5px 1px 0px rgba(0,0,0,0.3);
+  position: absolute;
+  &:after{
+    content:"";
+    background: url('/assets/images/token-logo.png');
+    background-repeat: no-repeat;
+    background-position: 50% 40%;
+    background-size: 50px 53px;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  &.legend{
+    height: 40px;
+    width: 40px;
+    box-shadow: none;
+    position: relative;
+    &:after{
+      background-size: 25px;
+      background-position: center;
+    }
+  }
+  &.error{
+    background-color: #F56D6D;
+    &.five-b{
+      background-color: darken(#F56D6D,5%);
+      border: 1px solid #F56D6D;
+    }
+    &.one-b{
+      background-color: darken(#F56D6D,10%);
+      transform: scale(0.6);
+    }
+  }
+  &.five-b{
+    background-color: #373c4d;
+    border: 1px solid lighten(#20263a, 20%);
+    transform: scale(0.8);
+  }
+  &.ten-b{
+    background-color: #F5AB6D;
+    transform: scale(0.8);
+  }
+  &.one-b{
+    background-color: #5C5AAB;
+    transform: scale(0.6);
+  }
+}
+
+// Emulator
+$veveBlue: #11CEF1;
+$veveLightGrey: #4F4F4F;
+$veveDarkGrey: #2D2D2D;
+.device{
+  margin: 20px 0;
+  width: 352px;
+  background: #2D2D2D;
+  overflow: hidden;
+  border-radius: 40px;
+  .text-xxs{ font-size: 11px;}
+  &__header{
+    padding: 15px 20px 10px 20px;
+    &-button{
+      text-align: center;
+      transition: 0.6s all;
+      position: relative;
+      &:hover{
+        transition: 0.3s all;
+        color: $veveBlue;
+      }
+      .bag-counter{
+        background: #4F4F4F;
+        position: absolute;
+        font-size: 12px;
+        line-height: 12px;
+        color: $veveBlue;
+        padding: 1px 4px;
+        left: -20px;
+        bottom: 0;
+        border-radius: 2px;
+      }
+      img{
+        width: auto;
+        height: auto;
+        &.search{
+          width: 20px;
+        }
+        &.bag{
+          width: 15px;
+          margin-right: 20px;
+        }
+      }
+    }
+    &-img{
+      width: 17px;
+      margin: auto;
+      height: 17px;
+    }
+    &-logo{
+      width: 90px;
+    }
+  }
+  &__content{
+    background: #4F4F4F;
+    height: 630px;
+  }
+  &__footer{
+    padding: 10px 20px;
+    &-button{
+      text-align: center;
+      width: 100%;
+      transition: 0.6s all;
+      &:hover{
+        transition: 0.3s all;
+        color: $veveBlue;
+      }
+      &:focus{
+        outline: none;
+      }
+      &.active{
+        .device__footer-title{
+          color: $veveBlue;
+
+        }
+      }
+    }
+    &-img{
+      width: 17px;
+      margin: auto;
+      height: 17px;
+    }
+    &-title{
+      margin-top: 3px;
+      display: block;
+    }
+  }
+}
+
+.w-500{
+  width: 500px;
+}
+
+.veve-light-grey{
+  color: $veveLightGrey;
+}
+
+.veve-light-grey-bg{
+  background: $veveLightGrey;
+}
+
+.device__screen--collection{
+  .collection-controls{
+    .controller{
+      background: rgb(201,201,201);
+      background: radial-gradient(circle, #ccc 30%, rgba(153,153,153,1) 100%);
+      span{
+        background: #1E1E1E;
+        margin-top: 22px;
+      }
+    }
+  }
+  .ar-options{
+    color: #fff;
+    text-align: center;
+    opacity: 0.7;
+    margin-top: 35px;
+    .ar-icon, .plus-icon, .camera-icon{
+      height: 35px;
+      width: 35px;
+      border-radius: 50%;
+      background: #333;
+      margin: auto;
+    }
+    .ar-icon{
+      font-size: 14px;
+      line-height: 33px;
+      font-weight: 600;
+    }
+    .camera-icon{
+      height: 40px;
+      width: 40px;
+      padding: 10px 0;
+      img{
+        width: 23px;
+        margin: auto;
+      }
+    }
+    .plus-icon{
+      font-size: 36px;
+      line-height: 24px;
+      font-weight: 300;
+    }
+  }
+}
+
+.device{ cursor: grab; }
+
+.feed{
+  &-tags{
+    button{
+      background: #424242;
+    }
+  }
+  &-post{
+    &__header{
+      background: $veveDarkGrey;
+      vertical-align: middle;
+      align-items: center;
+      display: flex;
+      border-radius: 10px 10px 0 0;
+    }
+    &__avatar{
+      border: 1px solid #ccc;
+    }
+    &__author{
+      color: $veveBlue;
+      margin-right: 5px;
+    }
+    &__counter{
+      background: $veveLightGrey;
+    }
+    &__comment{
+      background: #cacaca;
+    }
+    &__footer{
+      background: #cacaca;
+    }
+  }
+}
+
+.rec.rec-arrow {
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  overflow: hidden;
+  min-width: 24px;
+  background: transparent;
+  min-height: 24px;
+  font-size: 12px;
+  line-height: 24px;
+  color: #8c8c8c;
+  &:hover{
+    color: #8c8c8c;
+    background: transparent;
+  }
+}
+/* hide disabled buttons */
+.rec.rec-arrow:disabled {
+  visibility: hidden;
+}
 // Gem
 .gem-svg{
   display: inline-block;
