Enable lazy loading on sliders

--- a/public/assets/styles/styles.scss
+++ b/public/assets/styles/styles.scss
@@ -92,6 +92,11 @@ body{
   height: 463.99px;
 }
 
+.medium-articles--view-all{
+  width: 344px!important;
+  height: 288px;
+}
+
 // coin stack
 .coin-stack{
   position: relative;
