--- a/public/assets/styles/styles.scss
+++ b/public/assets/styles/styles.scss
@@ -418,7 +418,7 @@ $veveDarkGrey: #2D2D2D;
 // Bubbles
 .bubble {
   background-color: white;
-  background-image: url(/assets/images/spritesheet.png);
+  background-image: url(/assets/images/spritesheet.jpg);
   background-size: 1076px 1076px;
   border-radius: 50%;
   box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.1);
