End of day commit

--- a/public/assets/styles/styles.scss
+++ b/public/assets/styles/styles.scss
@@ -415,6 +415,11 @@ $veveDarkGrey: #2D2D2D;
   .st7{fill:#5757A0;}
 }
 
+.veve-intro{
+  background: url('/assets/images/veve-bg.jpg');
+  background-size: 800px;
+}
+
 // Bubbles
 .bubble {
   background-color: white;
